--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-image: url('sample.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
